--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,18 @@ layout: base
 </script>
 
 {% include header.html type="post" %}
+<!-- _post.html veya post sayfasının başına inline CSS ekleyebilirsiniz -->
+<head>
+  <style>
+    @media (max-width: 1199px) {
+      .navbar-custom .navbar-toggler {
+        margin-right: 1rem;  /* Sağdan boşluk bırak */
+        padding: 0.25rem 0.75rem;  /* Butonun boyutları */
+        font-size: 1.25rem;  /* Yazı boyutunu ayarla */
+      }
+    }
+  </style>
+</head>
 
 <main class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
   <div class="row">
