--- a/assets/css/pygment_highlights.css
+++ b/assets/css/pygment_highlights.css
@@ -18,10 +18,10 @@ pre .lineno {
   padding-right: 10px;
 }
 .language-plaintext.highlighter-rouge {
-  background: #E0E0E0 !important; /* Daha koyu arka plan */
+  background: #302323c2 !important;  /*Daha koyu arka plan */
   color: #a60019 !important; /* Açık metin */
-  padding: 10px;
-  border-radius: 5px;
+  padding: 5px;
+  border-radius: 25px;
   border: 0.5px solid #333333;
 }
 .highlight .c { color: #6A737D !important; font-style: italic } /* Comment */
